--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tayde Site</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -62,8 +62,10 @@
                             <li><a href="#">Pages<i class="fa-solid fa-angle-down"></i></a></li>
                             <li><a href="#">Contact</a></li>
                             <button>Book a Visit</button>
-                            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-                            <button><i class="fa-solid fa-bars"></i></button>
+                            <div class="header-menu-icon">
+                                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                                <a href="#"><i class="fa-solid fa-bars"></i></a>
+                            </div>
                         </ul>
                     </div>                    
                 </div>
@@ -193,8 +195,8 @@
                 </div>
                 <div class="about-img-right-text">
                     <div class="row">
-                        <div class="col-lg-6"></div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-4"></div>
+                        <div class="col-lg-8">
                             <div class="about-right">
                                 <h1>Speciality Of us</h1>
                                 <p href="#"><i class="fa-solid fa-check"></i>Easy To Care Your Child</p>
@@ -309,7 +311,7 @@
                     <span class="progress-right">
                         <span class="progress-bar"></span>
                     </span>
-                    <div class="progress-value">70%</div>
+                    <div class="progress-value">80%</div>
                 </div>
                 <div class="progress yellow">
                     <span class="progress-left">
