--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <!-- <link rel="stylesheet" href="css/jQuery-plugin-progressbar.css"> -->
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="style.css">
     
@@ -24,14 +23,14 @@
     <div class="header-top-area">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-md-9">
                     <div class="header-top-left">
                         <span><i class="fa-solid fa-clock"></i>9:30am - 6:30pm Mon - Sun <span>|</span></span>
                         <span><i class="fa-solid fa-phone"></i>+256 259 21589 <span>|</span></span>
                         <span><i class="fa-solid fa-location-dot"></i>Hilton Street, New York 215 US</span>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-3">
                     <div class="header-top-right text-center">
                         <span><i class="fa-brands fa-facebook-f"></i><span>|</span></span>
                         <span><i class="fa-brands fa-twitter"></i><span>|</span></span>
@@ -47,12 +46,12 @@
     <div class="header-menu-area">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-2">
                     <div class="header-logo">
                         <a href="#"><img src="./img/header logo.jpg" alt=""></a>
                     </div>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-9 col-md-10">
                     <div class="header-contant">
                         <ul>
                             <li><a href="#">Home<i class="fa-solid fa-angle-down"></i></a></li>
@@ -86,12 +85,12 @@
 <div class="slider-area" style="background-image: url(./img/bg_image.jpg);">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6">
                 <div class="slider-left">
                     
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6">
                 <div class="slider-contant">
                     <h1>We Are Childcare <br> Professionals</h1>
                     <p>Objectively administrate progressive bandwidth via 24/7 resources.</p>
@@ -160,7 +159,7 @@
 <div class="about-area">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6">
                 <div class="about-text">                   
                     <a href="#"><i class="fa-solid fa-circle"></i>About Cutie Care</a>
                     <h1>Learn About Our Work and <br> Cultural Activities.</h1>
@@ -189,7 +188,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6">
                 <div class="about-img-right">
                     <img src="./img/about-image.jpg" alt="">
                 </div>
@@ -276,12 +275,12 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="group-img">
                             <img src="img/group-2.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="group-img-2">
                             <h5><img src="img/group-3.jpg" alt=""></h5>
                             <img src="img/group-1.jpg" alt="">
@@ -289,38 +288,40 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-12">
                <div class="group-text">
                 <a href="#"><i class="fa-solid fa-circle"></i>Professional Skills</a>
                 <h1>Child Care For Good Way</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas...</p>
                </div>
-                <div class="progress blue">
-                    <span class="progress-left">
-                          <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                          <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value">85%</div>
-                </div> 
-                <div class="progress yellow">
-                    <span class="progress-left">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value">80%</div>
-                </div>
-                <div class="progress yellow">
-                    <span class="progress-left">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <span class="progress-right">
-                        <span class="progress-bar"></span>
-                    </span>
-                    <div class="progress-value">90%</div>
+                <div class="progess-bar-text">
+                    <div class="progress blue">
+                        <span class="progress-left">
+                              <span class="progress-bar"></span>
+                        </span>
+                        <span class="progress-right">
+                              <span class="progress-bar"></span>
+                        </span>
+                        <div class="progress-value">85%</div>
+                    </div> 
+                    <div class="progress yellow">
+                        <span class="progress-left">
+                            <span class="progress-bar"></span>
+                        </span>
+                        <span class="progress-right">
+                            <span class="progress-bar"></span>
+                        </span>
+                        <div class="progress-value">80%</div>
+                    </div>
+                    <div class="progress yellow">
+                        <span class="progress-left">
+                            <span class="progress-bar"></span>
+                        </span>
+                        <span class="progress-right">
+                            <span class="progress-bar"></span>
+                        </span>
+                        <div class="progress-value">90%</div>
+                    </div>
                 </div>
             </div>
          </div>
@@ -345,8 +346,8 @@
             </div>
             <div class="class-active">
                 <div class="row">
-                    <div class="col-lg-4">
-                        <div class="class-wrapper text-center">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="class-wrapper-1 text-center">
                             <div class="class-thumb">
                                 <img src="img/class.jpg" alt="">
                             </div>
@@ -355,19 +356,19 @@
                                 <p>Interactively brand client center through is <br> customized value good ideas.</p>
                                 <hr>
                                 <div class="row">
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-4">
                                         <div class="class-bottom-text text-center">
                                             <span>Age</span>
                                              <p>5-6 Years</p>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-4">
                                         <div class="class-bottom-text text-start">
                                             <span>Time</span>
                                              <p>8-10 am</p>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-4">
                                         <div class="class-bottom-text text-start">
                                             <span>Capacity:</span>
                                             <p>30 kids</p>                                            
@@ -377,8 +378,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="class-wrapper text-center">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="class-wrapper-2 text-center">
                             <div class="class-thumb">
                                 <img src="img/class-1.jpg" alt="">
                             </div>
@@ -387,19 +388,19 @@
                                 <p>Interactively brand client center through is <br> customized value good ideas.</p>
                                 <hr>
                                 <div class="row">
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-4">
                                         <div class="class-bottom-text text-center">
                                             <span>Age</span>
                                              <p>5-6 Years</p>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-4">
                                         <div class="class-bottom-text text-start">
                                             <span>Time</span>
                                              <p>8-10 am</p>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-4">
                                         <div class="class-bottom-text text-start">
                                             <span>Capacity:</span>
                                             <p>30 kids</p>                                            
@@ -410,7 +411,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="class-wrapper text-center">
+                        <div class="class-wrapper-3 text-center">
                             <div class="class-thumb">
                                 <img src="img/class.jpg" alt="">
                             </div>
@@ -489,7 +490,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="team-area-right">
                             <img src="img/team.png" alt="">
                             <h1>David Smith</h1>
@@ -500,7 +501,7 @@
                             <a href="#"><i class="fab fa-dribbble"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="team-area-right">
                             <img src="img/team-1.jpg" alt="">
                             <h1>David Smith</h1>
@@ -569,8 +570,8 @@
             </div>
             <div class="blog-active">
                 <div class="row">
-                    <div class="col-lg-4">
-                        <div class="blog-wrapper text-center">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="blog-wrapper-1 text-center">
                             <div class="blog-thumb">
                                 <img src="img/class.jpg" alt="">
                             </div>
@@ -582,8 +583,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="blog-wrapper text-center">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="blog-wrapper-2 text-center">
                             <div class="blog-thumb">
                                 <img src="img/class-1.jpg" alt="">
                             </div>
@@ -596,7 +597,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="blog-wrapper text-center">
+                        <div class="blog-wrapper-3 text-center">
                             <div class="blog-thumb">
                                 <img src="img/class.jpg" alt="">
                             </div>
@@ -625,37 +626,37 @@
 <div class="brand-area">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-8 col-md-12">
                 <div class="brand-left">
                     <a href="#"><i class="fa-solid fa-circle"></i>Supportive Brands</a>
                     <h1>Our Partners</h1>
                     <p>Competently strategize focused ideas after resource maximizing sources. </p>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="brand-right text-end">
+            <div class="col-lg-4 col-md-12">
+                <div class="brand-right">
                     <a href="#">Get In Touch</a>
                 </div>
             </div>
             <div class="brand-buttom">
-                <div class="col-lg-12">
+                <div class="col-lg-12 col-md-12">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3">
                             <div class="brand-img">
                                 <img src="img/brand.jpg" alt="">
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3">
                             <div class="brand-img-1">
                                 <img src="img/brand-1.jpg" alt="">
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3">
                             <div class="brand-img-2">
                                 <img src="img/brand-2.jpg" alt="">
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-3">
                             <div class="brand-img-3">
                                 <img src="img/brand-3.jpg" alt="">
                             </div>
@@ -678,8 +679,8 @@
     <div class="footer-area">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="footer-text-icon-left">
+                <div class="col-lg-4 col-md-6">
+                    <div class="footer-text-icon-left-1">
                         <a href="#"><i class="fas fa-headset"></i></a>
                         <div class="footer-text-left">
                            <p>Give us a Call</p>
@@ -687,8 +688,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="footer-text-icon-left">
+                <div class="col-lg-4 col-md-6">
+                    <div class="footer-text-icon-left-2">
                         <a href="#"><i class="fas fa-envelope-open-text"></i></a>
                         <div class="footer-text-left">
                            <p>Send us a Message</p>
@@ -697,7 +698,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="footer-text-icon-left">
+                    <div class="footer-text-icon-left-3">
                         <a href="#"><i class="fas fa-landmark"></i></a>
                         <div class="footer-text-left">
                            <p>Visit our Office</p>
@@ -709,7 +710,7 @@
             <div class="footer-bottom">      
                 <div class="col-lg-12">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <div class="footer-about">
                                 <h1>About Us</h1>
                                 <p>Eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum ultrice gravida isus commodo viverra. </p>
@@ -719,7 +720,7 @@
                                 <a href="#"><i class="fab fa-dribbble"></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <div class="footer-Details">
                                 <h1>Details Info</h1>
                                 <li><a href="#"><i class="fas fa-arrow-right"></i>Online Class</a></li>
@@ -729,7 +730,7 @@
                                 <li><a href="#"><i class="fas fa-arrow-right"></i>Upcoming Event</a></li>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <div class="footer-News">
                                 <h1>News Feed</h1>
                                 <div class="footer-img">
@@ -748,7 +749,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <div class="footer-Subscribe">
                                 <h1>Subscribe Now</h1>
                                 <p>Be the first one to receive latest updates <br> very easy and fastest</p>
@@ -780,8 +781,6 @@
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
-<!-- <script src="js/circle-progress.js"></script> -->
-<!-- <script src="js/jQuery-plugin-progressbar.js"></script> -->
 <script src="js/active.js"></script>
 
 </body>
